--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start",
     "lint": "eslint",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "5.22.0",
+    "dotenv": "^17.2.1",
     "next": "15.5.0",
+    "octokit": "^5.0.3",
     "react": "19.1.0",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "19.1.0",
@@ -28,7 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.19.1",
+    "prisma": "5.22.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
     "typescript": "^5"
